[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scene/PhysicalButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Font/CALIBRI.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/SettingsBoard.gd" type="Script" id=3]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 2, 0.2, 2 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.337255, 0.337255, 0.337255, 1 )

[sub_resource type="BoxShape" id=2]
margin = 0.001
extents = Vector3( 1, 0.1, 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="SpatialMaterial" id=5]

[sub_resource type="TextMesh" id=6]
material = SubResource( 5 )
text = "Audio"
font = SubResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="SpatialMaterial" id=8]

[sub_resource type="TextMesh" id=9]
material = SubResource( 8 )
text = "Reset"
font = SubResource( 7 )

[node name="SettingsBoard" type="Spatial"]
script = ExtResource( 3 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 2 )

[node name="AudioButton" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.75, 0.2, -0.67 )
state = true
toggle = true

[node name="Audio" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.163084, 0.219029, -0.504207 )
mesh = SubResource( 6 )

[node name="ResetButton" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.75, 0.2, 0.67 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.13321, 0.219, 0.821647 )
mesh = SubResource( 9 )

[connection signal="pressed_off" from="AudioButton" to="." method="_on_AudioButton_pressed_off"]
[connection signal="pressed_on" from="AudioButton" to="." method="_on_AudioButton_pressed_on"]
[connection signal="pressed_on" from="ResetButton" to="." method="_on_ResetButton_pressed_on"]
